--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@vue/test-utils": "^2.4.6",
     "json-server": "^1.0.0-beta.3",
     "vite": "^7.2.2",
-    "vitest": "^4.0.9"
+    "vitest": "^4.0.9",
+    "postcss": "^8.5.6",
+    "prettier": "3.5.3",
+    "tailwindcss": "^3.4.11",
+    "autoprefixer": "^10.4.21"
   }
 }
