--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "html2canvas": "^1.4.1",
+    "lucide-vue-next": "^0.562.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
@@ -19,12 +20,12 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.21",
     "json-server": "^1.0.0-beta.3",
-    "vite": "^7.2.2",
-    "vitest": "^4.0.9",
     "postcss": "^8.5.6",
     "prettier": "3.5.3",
     "tailwindcss": "^3.4.11",
-    "autoprefixer": "^10.4.21"
+    "vite": "^7.2.2",
+    "vitest": "^4.0.9"
   }
 }
